muitas modificações no back, sistema de pagamento integrado com api do mercado pago (pagamento ficticio), mudanças no banco de dados e tabelas, novas tabelas, controladores, models com belongsTwo, novas seeders, tela de treino, tela planos e extratos, carregadas no banco de dados.

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravellegends/pt-br-validator": "^11.0",
-        "mailgun/mailgun-php": "^4.2"
+        "mailgun/mailgun-php": "^4.2",
+        "mercadopago/dx-php": "^2.6"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
