--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.5",
         "laravellegends/pt-br-validator": "^11.0",
         "mercadopago/dx-php": "^2.6",
+        "pusher/pusher-php-server": "^7.2",
         "symfony/mailer": "*"
     },
     "require-dev": {
